--- a/index.css
+++ b/index.css
@@ -1,87 +1,318 @@
 * {
     margin: 0;
     padding: 0;
+    caret-color: transparent;
 }
 
-.screen-container {
+body {
     width: 100vw;
     height: 100vh;
+    background-color: rgb(7, 7, 7);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(202, 202, 202);
+}
+
+#loader1 {
+    width: 200px;
+    height: 20px;
+    border: 2px solid rgb(175, 236, 255);
+    border-radius: 30px;
+    padding: 5px;
+    margin: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    animation-iteration-count: infinite;
+}
+
+#slider1 {
+    height: 20px;
+    width: 40px;
+    border-radius: 30px;
+    margin: 1px;
+    animation-iteration-count: infinite;
+}
+
+@keyframes loading {
+    0% {
+        width: 40px;
+        background-color: rgb(175, 236, 255);
+    }
+
+    25% {
+        width: 100%;
+        background-color: rgb(175, 236, 255);
+    }
+    50% {
+        width: 40px;
+        background-color: rgb(175, 236, 255);
+    }
+    75% {
+        width: 100%;
+        background-color: rgb(175, 236, 255);
+    }
+
+    100% {
+        width: 40px;
+        background-color: rgb(175, 236, 255);
+    }
+}
+
+@keyframes loaderPosition {
+    0% {
+        justify-content: flex-start
+    }
+    74.9% {
+        justify-content: flex-end;
+    }
+    75.1% {
+        justify-content: flex-start;
+    }
+}
+
+#loader2 {
+    width: 205px;
+    height: 25px;
+    border: 2px solid pink;
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    overflow-x: hidden;
+}
+
+#slider2 {
+    height: inherit;
+    width: 60px;
+    position: absolute;
+}
+
+@keyframes sliderTwo {
+    from {
+        left: -40%;
+        background-color: pink;
+    }
+    to {
+        left: 100%;
+        background-color: pink;
+    }
+}
+
+#loader3 {
+    width: 200px;
+    height: 20px;
+    border: 2px solid rgb(127, 255, 127);
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    padding: 5px 0px;
+    justify-content: space-evenly;
+}
+
+.square {
+    width: 10px;
+    height: 20px;
+    background-color: rgb(127, 255, 127);
+}
+
+@keyframes btOne{
+    0% {
+        opacity: 0;
+    }
+    10% {
+        opacity: 100%;
+    }
+    20% {
+        opacity: 0%;
+    }
+    100% {
+        opacity: 0%;
+    }
+}
+
+@keyframes btTwo {
+    0% {
+        opacity: 0;
+    }
+    20% {
+        opacity: 100%
+    }
+    30% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes btThree {
+    0% {
+        opacity: 0;
+    }
+    30% {
+        opacity: 100%;
+    }
+    40% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0
+    }
+}
+
+@keyframes btFour {
+    0% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 100%;
+    }
+    50% {
+        opacity: 0
+    }
+    100% {
+        opacity: 0
+    }
+}
+
+@keyframes btFive {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 100%;
+    }    
+    60% {
+        opacity: 0
+    }
+    100% {
+        opacity: 0
+    }
+}
+
+@keyframes btSix {
+    0% {
+        opacity: 0;
+    }
+    60% {
+        opacity: 100%;
+    }
+    70% {
+        opacity: 0
+    }
+    100% {
+        opacity: 0
+    }
+}
+
+@keyframes btSeven {
+    0% {
+        opacity: 0;
+    }
+    70% {
+        opacity: 100%;
+    }
+    80% {
+        opacity: 0
+    }
+    100% {
+        opacity: 0
+    }
+}
+
+@keyframes btEight {
+    0% {
+        opacity: 0;
+    }
+    80% {
+        opacity: 100%;
+    }
+    90% {
+        opacity: 0
+    }
+    100% {
+        opacity: 0
+    }
+}
+
+@keyframes btNine {
+    0% {
+        opacity: 0;
+    }
+    90% {
+        opacity: 100%;
+    }
+    95% {
+        opacity: 0
+    }
+    100% {
+        opacity: 0
+    }
+}
+
+@keyframes btTen {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 100%;
+    }
+}
+
+#switch {
+    width: 80px;
+    height: 40px;
+    margin: 40px;
+    border-radius: 50px;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.8),
+                -2px -2px 10px rgba(20,20,20,0.5);
+    display: flex;
+    align-items: center;
+    padding: 5px
+}
+
+#switcharea {
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    background-color: rgb(5, 5, 5);
+    box-shadow: inset 3px 3px 5px rgba(0,0,0,0.8),
+                inset -1px -1px 3px rgba(10,10,10,0.2);
+
 }
 
 #toggle {
-    font-family: sans-serif;
-    width: 100px;
-    height: 50px;
-    font-size: 12px;
-    letter-spacing: 0.05em;
-    border-radius: 50px;
-    padding: 10px;
-    border: 1px;
-    color: rgb(76, 76, 76);
-    border-top: white;
-    border-left: white;
-    border-right: gray;
-    border-bottom: gray;
-    box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, 0.5), 
-            -4px -4px 6px 0 rgba(116, 125, 136, 0.2), 
-            inset -4px -4px 6px 0 rgba(255, 255, 255, 0.5), 
-            inset 4px 4px 6px 0 rgba(116, 125, 136, 0.3);
-    background-image: linear-gradient(145deg, #f0f0f0, #cacaca);
-    caret-color: transparent;
-    display: flex; 
-    justify-content: flex-start;
-    align-items: center;
-}
-
-#switch-area {
-    width: 100%;
     height: 100%;
-    background-color: rgb(227, 156, 168);
-    border-radius: 50px;
+    width: 40px;
+    background-color: rgb(47, 47, 47);
+    border-radius: 50%;
+    box-shadow: inset 3px 3px 5px rgba(96, 96, 96, 0.5),
+                inset -3px -3px 5px rgba(0,0,0,0.5)
 }
 
-.circle {
-    height: 50px;
-    width: 50px;
-    border-radius: 50px;
-    background-color: rgb(237, 237, 237);
-    box-shadow: inset 4px 4px 5px rgba(255, 255, 255, 0.7), 
-            inset -4px -4px 5px rgba(223, 223, 223, 0.8);
-}
 
-@keyframes colorChange {
+
+@keyframes toggleOn {
     from {
-        background-color: rgb(227, 156, 168);
+        transform: translateX(0%);
     }
-    to {
-        background-color: rgb(127, 209, 127);
-    }
-} 
-
-@keyframes colorChangeReverse {
-    from {
-        background-color: rgb(127, 209, 127);
-    }
-    to {
-        background-color: rgb(227, 156, 168);
-    }
-}
-
-@keyframes slide {
     to {
         transform: translateX(100%);
+        background-color: rgb(99, 162, 99);
     }
 }
 
-@keyframes slideBackwards {
+@keyframes toggleOff {
     from {
-        transform: translateX(100%);
+        transform: translate(100%);
+        background-color: rgb(99, 162, 99);
+
     }
     to {
         transform: translateX(0%);
     }
 }
+
+
